Bug 407596 - Unable to enter password or OTP during connection to fortissl vpn
Summary: Unable to enter password or OTP during connection to fortissl vpn
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR crash
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-16 11:50 UTC by stanislavb
Modified: 2024-12-23 18:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments
kded5 crash dump (5.38 KB, text/plain)
2019-05-16 13:47 UTC, stanislavb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stanislavb 2019-05-16 11:50:13 UTC
SUMMARY
I am unable to enter password or OTP during connection to fortissl vpn. The window prompt for password or OTP is to shown and the log contains error "Failed to request VPN secrets #3: No agents were available for this request.". I have no problem with wifi profiles where prompt for password is correctly shown. Also it results to crash of kded5 process.

STEPS TO REPRODUCE
1. create profile for fortissl vpn
2. set password policy to always ask for the password
3. try to connect to this profile

OBSERVED RESULT
The prompt for the password is not shown and the connection is unsuccessful. The same applies for OTP prompt if the password is stored and does not to be entered.

EXPECTED RESULT
It should be possible to enter password (or OTP) during the connection - password popup window should be presented.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Jan Grulich 2019-05-16 11:59:47 UTC
Can you get me backtrace of the crash?
Comment 2 stanislavb 2019-05-16 13:47:29 UTC
Created attachment 120106 [details]
kded5 crash dump

The process crash dump from the log is attached. If you need anything else, please let me know what you need. Thank you.
Comment 3 Jan Grulich 2019-05-16 13:55:55 UTC
Git commit 7a7d1b731eb2dce2198c0a0e1cad08d961518742 by Jan Grulich.
Committed on 16/05/2019 at 13:55.
Pushed by grulich into branch 'Plasma/5.16'.

Fortissl VPN: fix crash when obtaining properties in the auth dialog
FIXED-IN: 5.16.0

M  +2    -2    vpn/fortisslvpn/fortisslvpnauth.cpp

https://commits.kde.org/plasma-nm/7a7d1b731eb2dce2198c0a0e1cad08d961518742
Comment 4 Ben Cooksley 2024-12-23 18:25:57 UTC
Bulk transfer as requested in T17796