Fortissl VPN: fix crash when obtaining properties in the auth dialog

BUG: 407596
FIXED-IN: 5.16.0